--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -7,7 +7,7 @@
         <div class="navbar-right search-field">
             {{#bs-form formLayout="inline" action="search"}}
                 {{#bs-button type="primary" icon="glyphicon glyphicon-download" action="getPhotos"}}{{/bs-button}}
-                {{bs-input type="text" value=searchField placeholder="search something"}}
+                {{bs-input type="text" value=tagSearchField action="search" placeholder="search for a flickr tag"}}
                 <button type="submit" class="btn btn-default">
                     <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
                 </button>
@@ -17,13 +17,23 @@
 </nav>
 
 <div class="container">
-	<h2 id="title">Flicker feed:</h2>
-	<ul class="list-group">
-		{{#each photo in filteredPhotos}}
-			<li class="list-group-item">
-				{{photo.title}} ({{photo.username}})<br>
-				<img class="feed-img" src="{{photo.url}}" />
-			</li>
-		{{/each}}
-	</ul>
+
+    {{#if filteredPhotos}}
+        <ul class="list-group">
+            {{#each photo in filteredPhotos}}
+            <li class="list-group-item">
+                {{photo.title}} ({{photo.username}})<br>
+                <img class="feed-img" src="{{photo.url}}" />
+            </li>
+            {{/each}}
+        </ul>
+    {{else}}
+        <div class="jumbotron">
+            <h1>D's Photos</h1>
+            <p>Created by Dalton</p>
+            <p>Search for a flickr tag to load the most recent images</p>
+        </div>
+    {{/if}}
+
+
 </div>
