--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -7,4 +7,10 @@ body { padding-top: 70px; }
 .search-field {
     padding-top: 8px;
     padding-right: 10px;
+
+
+.tag-button {
+    padding: 4px;
+    margin: 1px;
+
 }
