--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -31,7 +31,10 @@
         <div class="jumbotron">
             <h1>D's Photos</h1>
             <p>Created by Dalton</p>
-            <p>Search for a flickr tag to load the most recent images</p>
+            <p>Click one of the popular flickr tags below or search one above:</p>
+            {{#each tag in tagList}}
+                <button class="btn btn-info tag-button" {{action "clicktag" tag}}>{{tag}}</button>
+            {{/each}}
         </div>
     {{/if}}
 
