--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -6,7 +6,12 @@
         </div>
         <div class="navbar-right search-field">
             {{#bs-form formLayout="inline" action="search"}}
-                {{#bs-button type="primary" icon="glyphicon glyphicon-download" action="getPhotos"}}{{/bs-button}}
+                {{#if filteredPhotos}}
+                    {{bs-input type="text" value=searchField placeholder="filter photos"}}
+                {{else}}
+                    Nope
+                
+                {{/if}}
                 {{bs-input type="text" value=tagSearchField action="search" placeholder="search for a flickr tag"}}
                 <button type="submit" class="btn btn-default">
                     <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
@@ -22,7 +27,12 @@
         <ul class="list-group">
             {{#each photo in filteredPhotos}}
             <li class="list-group-item">
-                {{photo.title}} ({{photo.username}})<br>
+                Title: {{photo.title}}<br>
+                {{photo.description}}<br>
+                Views: {{photo.views}}<br>
+                Tags: {{#each tag in photo.tags}}{{tag}}, {{/each}}<br>
+                User: {{photo.owner.username}}<br>
+                Profile: <a href={{photo.link}}>{{photo.link}}</a>
                 <img class="feed-img" src="{{photo.url}}" />
             </li>
             {{/each}}
