--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,5 +1,9 @@
 .feed-img {
-    max-width: 100%;
+    background: url('../loading-img.gif');
+    min-height: 64px;
+    min-width: 64px;
+    max-width: 240px%;
+    
 }
 
 body { padding-top: 70px; }
@@ -19,3 +23,5 @@ body { padding-top: 70px; }
     padding: 2px;
     margin-top: 1px;
 }
+
+
