--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -21,16 +21,15 @@
 
 <div class="container">
 
-    {{#if filteredPhotos}}
+    {{#liquid-if filteredPhotosLoaded use="toDown"}}
         <ul class="list-group">
             {{#each photo in filteredPhotos}}
             <li class="list-group-item">
                 <div class=="media">
                     <div class="media-left media-middle"> 
-                        <a href="{{photo.link}}" target="_blank">
-                            <img class="media-object" src="{{photo.url}}" />
-                        </a>
-                        Taken: {{photo.humanRedableDate}}<br>
+                        {{light-box href=photo.url data-lightbox=photo.id data-title=photo.title
+                            data-class="media-object feed-img"}}
+                        Taken: {{photo.humanReadableDate}}<br>
                         By: <a href={{photo.ownerurl}} target="_blank">{{photo.owner.username}}</a><br>
                     
                     </div>
@@ -52,15 +51,19 @@
             {{/each}}
         </ul>
     {{else}}
-        <div class="jumbotron">
-            <h1>D's Photos</h1>
-            <p>Created by Dalton</p>
-            <p>Click one of the popular flickr tags below or search one above:</p>
-            {{#each tag in tagList}}
-                <button class="btn btn-info tag-button" {{action "clicktag" tag}}>{{tag}}</button>
-            {{/each}}
-        </div>
-    {{/if}}
+        {{#liquid-if loading use="toDown"}}
+            <img src="../page-loading.gif" class="img-responsive center-block"/>
+        {{else}}
+            <div class="jumbotron">
+                <h1>D's Photos</h1>
+                <p>Created by Dalton</p>
+                <p>Click one of the popular flickr tags below or search one above:</p>
+                {{#each tag in tagList}}
+                    <button class="btn btn-info btn-small tag-button" {{action "clicktag" tag}}>#{{tag}}</button>
+                {{/each}}
+            </div>
+        {{/liquid-if}}
+    {{/liquid-if}}
 
 
 </div>
