--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -52,7 +52,7 @@
         </ul>
     {{else}}
         {{#liquid-if loading use="toDown"}}
-            <img src="../page-loading.gif" class="img-responsive center-block"/>
+            <img src="page-loading.gif" class="img-responsive center-block"/>
         {{else}}
             <div class="jumbotron">
                 <h1>D's Photos</h1>
