--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -3,14 +3,15 @@
     min-height: 64px;
     min-width: 64px;
     max-width: 240px%;
-    
+
 }
 
-body { padding-top: 70px; }
+.body { padding-top: 70px; }
 
 .search-field {
     padding-top: 8px;
     padding-right: 10px;
+}
 
 
 .tag-button {
@@ -25,3 +26,14 @@ body { padding-top: 70px; }
 }
 
 
+.auth-form {
+    margin-top: -34px;
+}
+
+.auth-user-field {
+    width: 150px !important;
+}
+
+.search-form {
+    margin-left: -250px;
+}
