--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -15,7 +15,7 @@
                     <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
                 </button>
             {{/bs-form}}
-            {{auth-manager}}
+            {{auth-manager class="auth-mgr" userid=userid}}
         </div>
     </div>
 </nav>
@@ -35,7 +35,17 @@
                     
                     </div>
                     <div class="media-body">
-                        <h4 class="media-heading">{{photo.title}} ({{photo.views}} Views)</h4>i
+                        <h4 class="media-heading">{{photo.title}} ({{photo.views}} Views)
+                            {{#if photo.liked}}
+                                <button class="btn btn-warning btn-xs pull-right" disabled="disabled">
+                                    <span class="glyphicon glyphicon-thumbs-up"></span> Like
+                                </button>
+                            {{else}}
+                                <button class="btn btn-default btn-xs pull-right" {{action "like" photo}}>
+                                    <span class="glyphicon glyphicon-thumbs-up"></span>  Like
+                                </button>
+                            {{/if}}
+                        </h4>
                         {{{photo.description}}}
                     </div>
                 </div>
