--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,33 +1,26 @@
 .feed-img {
-    background: url('../loading-img.gif');
-    min-height: 64px;
-    min-width: 64px;
-    max-width: 240px%;
-
+    max-width: 100%
 }
-
-.body { padding-top: 70px; }
-
+body { padding-top: 70px; }
 .search-field {
     padding-top: 8px;
     padding-right: 10px;
+    width: 100%;
 }
-
 
 .tag-button {
-    padding: 4px;
+    padding:4px;
     margin: 1px;
-
 }
-
 .post-tag-button {
-    padding: 2px;
+    padding:2px;
     margin-top: 1px;
 }
-
-
-.auth-form {
-    margin-top: -34px;
+.feed-img {
+    background: url('../loading-img.gif');
+    min-height: 64px;
+    min-width: 64px;
+    max-width: 240px;
 }
 
 .auth-user-field {
@@ -35,5 +28,17 @@
 }
 
 .search-form {
-    margin-left: -250px;
+    float: left;
+}
+
+.navbar-brand {
+    position: absolute;
+    width: 100%;
+    text-align: center;
+    margin: 0 auto;
+    z-index: -1;
+}
+
+.auth-mgr {
+    float: right;
 }
